FIX: Dark mode issue in mobile device (v3.2.4)

--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -46,6 +46,7 @@ li {
   height: clamp(170px, 30vw, 220px);
   margin: 1rem auto;
   position: relative;
+  z-index: 0;
 }
 
 #myDoughnutChart {
@@ -58,7 +59,8 @@ li {
   height: clamp(170px, 30vw, 220px);
   background-color: var(--bg-color);
   position: absolute;
-  z-index: 1111;
+  z-index: 1;
+
   display: grid;
   place-items: center;
   text-align: center;
@@ -81,20 +83,28 @@ body.light {
   transition: all 0.3s ease;
 }
 
+.switch-mode > .sun,
+.switch-mode > .moon {
+  pointer-events: none;
+}
+
 section {
   position: relative;
 }
 
 .switch-mode {
-  background-color: var(--bg-color-secondary);
-  padding: 0.5rem;
-  border-radius: 50%;
-  font-size: 1.2rem;
-  height: min-content;
-  cursor: pointer;
+  width: 2.2rem;
+  height: 2.2rem;
   position: absolute;
   top: 1rem;
   right: 1rem;
+  font-size: 1.3rem;
+  background-color: var(--bg-color-secondary);
+  cursor: pointer;
+  border-radius: 50%;
+  display: grid;
+  place-items: center;
+  z-index: 2;
 }
 
 .hidden {
